Use java 21 feature